feature: add tags in swagger controller
