# src/controllers/student-route.ts
@@ -13,17 +13,29 @@ interface UpdateEmployeeRequest extends Request {
     name: string;
 }
 
+
 studentRoute.get('/student', (req, res) => {
+            /*
+            #swagger.tags = ['Student']
+            #swagger.summary = 'Create a new user'
+            #swagger.description = 'This endpoint will create a new user...'
+        */
     res.status(200).json(employees);
 });
 
 studentRoute.get('/student/:id', (req, res) => {
+    /**
+     *  #swagger.tags = ['Student']
+     */
     const employee = employees.find(e => e.id === parseInt(req.params.id));
     if (!employee) res.status(404).json({ message: 'Employee not found' });
     res.status(200).json(employee);
 });
 
 studentRoute.patch('/student/:id', (req: UpdateEmployeeRequest, res) => {
+     /**
+     *  #swagger.tags = ['Student']
+     */
    const employee = employees.find(e => e.id === req.body.id);
     if (!employee) res.status(404).json({ message: 'Employee not found' });
 
