# swagger_output.json
@@ -14,6 +14,9 @@
   "paths": {
     "/employee/getEmployees": {
       "get": {
+        "tags": [
+          "Employees"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -24,6 +27,9 @@
     },
     "/employee/getEmployee/{id}": {
       "get": {
+        "tags": [
+          "Employees"
+        ],
         "description": "",
         "parameters": [
           {
@@ -47,6 +53,9 @@
     },
     "/employee/updateEmployee": {
       "patch": {
+        "tags": [
+          "Employees"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -77,7 +86,11 @@
     },
     "/student/student": {
       "get": {
-        "description": "",
+        "tags": [
+          "Student"
+        ],
+        "summary": "Create a new user",
+        "description": "This endpoint will create a new user...",
         "responses": {
           "200": {
             "description": "OK"
@@ -87,6 +100,9 @@
     },
     "/student/student/{id}": {
       "get": {
+        "tags": [
+          "Student"
+        ],
         "description": "",
         "parameters": [
           {
@@ -108,6 +124,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "Student"
+        ],
         "description": "",
         "parameters": [
           {
